--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
+nbactions.xml
+nb-configuration.xml
 
 logs/
 main.db
